# tauri-pixiv-crawler-rs

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml
src/: App.vue
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Downloader.vue
src/views/: Downloader.vue
