[package]
name = "pixiv-crawler"
version = "0.0.4"
description = "A Tauri App"
authors = ["kingwingfly: 20200581@cqu.edu.cn"]
license = ""
repository = "https://github.com/kingwingfly/pixiv-crawler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["default"] }
reqwest = "0.11.16"
once_cell = { version = "*" }
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
